fix display of code on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -278,6 +278,10 @@ ol {
 	padding-left: 1.6em;
 }
 
+.code {
+	overflow-x: scroll;
+}
+
 
 /* Navbar
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
